# nwn_emitter_editor

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: release.yml
cmake/: mingw-w64-toolchain.cmake
include/: camera.hpp  emitter.hpp  file_dialog.hpp  grab_mode.hpp  particle_system.hpp  property_editor.hpp  stb_dds.hpp  toast_manager.hpp
src/: camera.cpp  emitter.cpp  file_dialog.cpp  main.cpp  particle_system.cpp  property_editor.cpp  stb_dds.cpp  toast_manager.cpp
